--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"description": "CAS/SSO integration in SvelteKit",
 	"module": "dist/index.mjs",
 	"main": "dist/index.js",
-	"version": "1.0.1",
+	"version": "2.0.0",
 	"exports": {
 		".": {
 			"import": "./dist/index.mjs",
@@ -18,38 +18,44 @@
 		"README.md"
 	],
 	"scripts": {
-		"doc": "typedoc src/index.ts --out docs && cp LICENSE.md CONTRIBUTING.md docs/.",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"lint": "eslint src/",
-		"prebuild": "tsc",
-		"build": "rollup -c",
+		"lint": "run-p -l -c --aggregate-output lint:**",
+		"lint:eslint": "eslint --max-warnings=0 src/",
+		"lint:prettier": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
+		"lint:jscpd": "jscpd --mode strict --exitCode 1 --reporters consoleFull src",
+		"lint:typescript": "tsc --noEmit",
+		"doc": "typedoc src/index.ts",
+		"types": "tsc --emitDeclarationOnly --declaration --declarationDir types",
+		"prebuild": "tsc --emitDeclarationOnly --declaration --declarationDir types",
+		"build": "rollup -c --bundleConfigAsCjs",
 		"prepublishOnly": "npm run build"
 	},
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^21.0.1",
-		"@rollup/plugin-json": "^4.1.0",
-		"@rollup/plugin-node-resolve": "^9.0.0",
-		"@rollup/plugin-typescript": "^8.3.0",
-		"@sveltejs/kit": "^1.0.0-next.201",
-		"@typescript-eslint/eslint-plugin": "^5.5.0",
-		"@typescript-eslint/parser": "^5.5.0",
+		"@rollup/plugin-node-resolve": "^15.0.1",
+		"@rollup/plugin-terser": "^0.2.0",
+		"@rollup/plugin-typescript": "^10.0.1",
+		"@types/node": "^16.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.4.0",
-		"express": "^4.17.1",
-		"node-fetch": "^3.1.0",
+		"eslint-config-prettier": "^8.5.0",
+		"jscpd": "^3.5.1",
+		"npm-run-all": "^4.1.5",
 		"prettier": "^2.5.1",
-		"rollup": "^2.0.0",
-		"rollup-plugin-svelte": "^7.0.0",
-		"rollup-plugin-terser": "^7.0.2",
-		"svelte": "^3.5.0",
-		"tslib": "^2.3.1",
-		"typedoc": "^0.22.10",
-		"typescript": "^4.5.2"
+		"rollup": "^3.5.1",
+		"svelte": "^3.44.0",
+		"tslib": "^2.4.1",
+		"typedoc": "^0.23.21",
+		"typescript": "^4.9.3",
+		"vite": "^3.2.4 || ^4.0.0"
+	},
+	"peerDependencies": {
+		"@sveltejs/kit": "^1.0.0-next.492"
 	},
 	"dependencies": {
-		"env-var": "^7.1.1",
-		"logical-cas-client": "^0.0.4",
-		"njwt": "^1.2.0",
-		"universal-cookie": "^4.0.4"
+		"@macfja/sveltekit-session": "^1.0.5",
+		"@sveltejs/kit": "^1.0.0-next.492",
+		"xml-js": "^1.6.11"
 	},
 	"repository": {
 		"type": "git",
@@ -61,10 +67,14 @@
 	"homepage": "https://github.com/macfja/sveltekit-cas#readme",
 	"author": "MacFJA",
 	"license": "MIT",
+	"type": "module",
 	"types": "types/index.d.ts",
 	"keywords": [
 		"sso",
 		"cas",
+		"cas1",
+		"cas2",
+		"cas3",
 		"svelte",
 		"sveltejs",
 		"sveltekit"
